[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mayavi_utils"
dynamic = ["version"]
authors = [
  { name='Peter Clark', email='p.clark@reading.ac.uk'},
]
description='python code to provide simple wrappers for mayavi object creation functions.'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = 'Apache-2.0'
dependencies = [
    "numpy",
    "xarray",
    "netCDF4",
    "mayavi"
#    "loguru",
	]

[tool.setuptools.packages.find]
where = ["src/"]

[project.urls]
Homepage = "https://github.com/ReadingClouds/mayavi_utils"
Issues = "https://github.com/ReadingClouds/mayavi_utils/issues"

[tool.setuptools_scm]
